# i4g

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  i4g_store.db  pyproject.toml  requirements.in  requirements.txt
.github/: chat-instructions.md  copilot-instructions.md  docs.instructions.md  general-coding.instructions.md
.github/workflows/: build-fastapi.yaml  docs-snippet-check.yml  sync_fork_action.yml
config/: settings.default.toml  settings.dev_network_smoke.toml  settings.network_smoke.toml
docker/: Dockerfile  account-job.Dockerfile  fastapi.Dockerfile  ingest-job.Dockerfile  intake-job.Dockerfile  report-job.Dockerfile  streamlit.Dockerfile  weekly-refresh-job.Dockerfile
docs/: analyst_runbook.md  architecture.md  compliance.md  confidentiality_agreement.md  contributing.md  contributors.md  dev_guide.md  iam.md  prd.md  prd_intelligence_for_good.md  prd_production.md  prd_prototype.md  retrieval_gcp_guide.md  roadmap.md  smoke_test.md  tdd.md
docs/config/: README.md  settings_manifest.json  settings_manifest.yaml
docs/dt-ifg/: README.md  change_log.md  discovery-export.sh  doc_site_option.md  future_architecture.md  gap_analysis.md  implementation_roadmap.md  migration_plan.md  public_infra_todo.md  system_review.md  technology_evaluation.md
docs/examples/: reviews_search_schema.json
faiss_index/: index.faiss  index.pkl
scripts/: bootstrap_local_sandbox.py  build_image.sh  build_index.py  check_docs_snippets.py  evaluate_vertex_search.py  export_settings_manifest.py  ingest_bundles.py  ingest_vertex_search.py  prepare_retrieval_dataset.py  query_kb.py  query_vertex_search.py  refresh_hybrid_schema_snapshot.py  run_account_job.sh  run_extraction.py  run_ocr.py  run_semantic_extraction.py  smoke_dev_cloud_run.py  smoke_vertex_retrieval.py  synthesize_chat_screenshots.py  verify_ingestion_run.py
scripts/git-hooks/: check-doc-snippets.sh  pre-commit
scripts/infra/: add_azure_secrets.py
scripts/migration/: azure_blob_to_gcs.py  azure_search_export.py  azure_search_to_vertex.py  azure_sql_to_firestore.py  import_vertex_documents.py  run_weekly_refresh.py
src/i4g/: __init__.py  observability.py
src/i4g/api/: account_list.py  app.py  auth.py  discovery.py  intake.py  review.py
src/i4g/classification/: __init__.py  classifier.py
src/i4g/cli/: __init__.py  admin.py  query_kb.py
src/i4g/embedding/: __init__.py  embedder.py
src/i4g/extraction/: __init__.py  ner_rules.py  semantic_ner.py
src/i4g/ingestion/: __init__.py  preprocess.py
src/i4g/migrations/: __init__.py  env.py  script.py.mako
src/i4g/normalization/: __init__.py  normalizer.py  reference_data.py  schema.py
src/i4g/ocr/: __init__.py  tesseract.py
src/i4g/rag/: __init__.py  pipeline.py
src/i4g/reports/: gdoc_exporter.py  generator.py  template_engine.py
src/i4g/services/: __init__.py  discovery.py  factories.py  firestore_writer.py  hybrid_search.py  ingest_payloads.py  intake.py  intake_job_runner.py  vertex_documents.py  vertex_writer.py
src/i4g/settings/: config.py  (+1 more)
templates/: base_template.md.j2  fbi_template.md.j2
tests/adhoc/: .gitignore  README.md  account_list_export_smoke.py  analyst_dashboard_demo.py  bge_embed_server.py  build_scam_bundle.py  classify_text.py  generate_context_snapshot.sh  hf_embedding.py  manual_ingest_demo.py  manual_report_demo.py  manual_report_export_demo.py  manual_review_demo.py  manual_task_demo.py  ocr_extract_texts.py  paddle_vs_tesseract.py  synthesize_chat_screenshots.py  synthesize_review_cases.py  test_full_pipeline.py  test_ollama_connection.py  test_paddle.py  test_store_structured.py  test_store_vector.py
tests/output/: simple_text_res.json
tests/unit/: test_api_intake.py  test_api_review.py  test_app_tasks.py  test_classifier.py  test_gdoc_exporter.py  test_ingest_dual_write.py  test_ingest_job_retry_helpers.py  test_ingest_payloads.py  test_ingest_retry_job.py  test_ingestion_retry_store.py  test_ingestion_run_tracker.py  test_intake_job_runner.py  test_intake_service.py  test_normalizer.py  test_rag_pipeline.py  test_rate_limit_and_queue.py  test_report_generator.py  test_report_integration.py  test_retriever.py  test_review_store.py  test_sql_writer.py  test_store_structured.py  test_store_vector.py  test_template_engine.py  test_worker_account_list_job.py  test_worker_intake_job.py  test_worker_tasks.py
(+48 files in other folders)
